# Graphics-API-Practice

./: CMakeLists.txt  README.md  vcpkg.json
include/GAPIP/opengl/: index_buffer.hpp  renderer.hpp  shader_interface.hpp  utils.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
lib/: CMakeLists.txt
lib/opengl/: index_buffer.cpp  renderer.cpp  shader_interface.cpp  utils.cpp  vertex_array.cpp  vertex_buffer.cpp
shaders/opengl/fragment/: magenta.shader
src/: CMakeLists.txt  my_opengl.cpp
